--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
         </thead>
         <tbody>
             <tr>
-                <td><a href="book1.html">The Great Gatsby</a></td>
+                <td><a target="_blank" href="book1.html">The Great Gatsby</a></td>
                 <td>F. Scott Fitzgerald</td>
                 <td>1925</td>
             </tr>
             <tr>
-                <td><a href="book2.html">To Kill a Mockingbird</a></td>
+                <td><a target="_blank" href="book2.html">To Kill a Mockingbird</a></td>
                 <td>Harper Lee</td>
                 <td>1960</td>
             </tr>
             <tr>
-                <td><a href="book3.html">1984</a></td>
+                <td><a target="_blank" href="book3.html">1984</a></td>
                 <td>George Orwell</td>
                 <td>1949</td>
             </tr>
